이채영/chapter13/ECS/chapter13.3.1-Create-ECS/Security_Group.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Create Security Group
# ------------------------------------------------------------#
# Input Parameters
# ------------------------------------------------------------#
Parameters:
  SystemName:
    Description: "System name of each resource names."
    Type: String
    Default: "gr"
  EnvName:
    Description: "Environment name of each resource names."
    Type: String
    Default: "product"
# ------------------------------------------------------------#
#  Create Security Group
# ------------------------------------------------------------#
Resources:
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup # 보안 그룹을 생성
    Properties:
      GroupName: !Sub ${SystemName}-${EnvName}-alb-sg # 보안 그룹 이름을 지정
      GroupDescription: !Sub ${SystemName}-${EnvName}-alb-sg # 보안 그룹 설명
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId:
        Fn::ImportValue: !Sub ${EnvName}-vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${EnvName}-alb-sg
        - Key: Env
          Value: !Sub ${EnvName}
  FargateSecurityGroup:
    Type: AWS::EC2::SecurityGroup # 보안 그룹을 생성
    Properties:
      GroupName: !Sub ${SystemName}-${EnvName}-fargate-sg # 보안 그룹 이름을 지정
      GroupDescription: !Sub ${SystemName}-${EnvName}-fargate-sg # 보안 그룹 설명
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
      VpcId:
        Fn::ImportValue: !Sub ${EnvName}-vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${EnvName}-fargate-sg
        - Key: Env
          Value: !Sub ${EnvName}
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup # 보안 그룹을 생성
    Properties:
      GroupName: !Sub ${SystemName}-${EnvName}-ec2-sg # 보안 그룹 이름을 지정
      GroupDescription: !Sub ${SystemName}-${EnvName}-ec2-sg # 보안 그룹 설명
      SecurityGroupIngress: # 허용할 IP 주소 설정
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      VpcId:
        Fn::ImportValue: !Sub ${EnvName}-vpc
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${EnvName}-ec2-sg
        - Key: Env
          Value: !Sub ${EnvName}
# ------------------------------------------------------------
# Output Parameters
# ------------------------------------------------------------
Outputs:
  # Security Groups
  FargateSecurityGroup:
    Value: !Ref FargateSecurityGroup
    Export:
      Name: !Sub ${EnvName}-fargate-sg
  ALBSecurityGroup:
    Value: !Ref ALBSecurityGroup
    Export:
      Name: !Sub ${EnvName}-alb-sg
  EC2SecurityGroup:
    Value: !Ref EC2SecurityGroup
    Export:
      Name: !Sub ${EnvName}-ec2-sg
